samples/invalid/eval/anno_binary_non_byte.g
language g0

import 'std as std

asm.result = std.anno 'binary [300]
